# apollo-bot

./: Cargo.toml  README.md  docker-compose.yml
lavalink/: application.yml
src/: commands.rs  main.rs
