[package]
name = "apollo"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.dotenv]
version = "0.15"

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend"]
