[package]
name = "apollo"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
songbird = { version = "0.4.3", features = ["builtin-queue"] }
poise = "0.6.1"
anyhow = "1.0.93"
